// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User GQL schema should respond with a list of users 1`] = `
Array [
  Object {
    "_id": "5abba8e47af4d91c259e12ef",
    "createdAt": "2018-12-12T13:00:00",
    "email": "User1@gql.com",
    "lastLogin": "2018-12-12T03:14:07",
    "posts": Array [],
    "username": "User1",
  },
]
`;

exports[`User GQL schema should respond with an object of a particular user 1`] = `
Object {
  "_id": "5abba8e47af4d91c259e12ef",
  "createdAt": "2018-12-12T13:00:00",
  "email": "User1@gql.com",
  "lastLogin": "2018-12-12T03:14:07",
  "posts": Array [],
  "username": "User1",
}
`;
